syntax = "proto3";
package ru.base.grpc.auth;

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

